kube/Logging/kibana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: kibana
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: kibana
    spec:
      containers:
      - image: komljen/kibana
        name: kibana
        ports:
        - containerPort: 5601
        resources: {}
      restartPolicy: Always
status: {}
