kube/Logging/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: elasticsearch
  name: elasticsearch
  namespace: default
spec:
  ports:
  - name: 9200-tcp
    port: 9200
    targetPort: 9200
  selector:
    name: elasticsearch
