kube/Logging/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: kibana
  name: kibana
  namespace: default
spec:
  ports:
  - name: 5601-tcp
    port: 5601
    targetPort: 5601
  selector:
    name: kibana
