kube/Logging/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: logstash
  name: logstash
  namespace: default
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    targetPort: 5000
  selector:
    name: logstash
